--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "jeroennoten/laravel-adminlte": "^3.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4"
+        "laravel/ui": "2.4",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
